Updated workflow. Change only doesn't work.

--- a/.github/workflows/sql_check.yml
+++ b/.github/workflows/sql_check.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           sql-path: migrations
           strict: "true"
-          changed-only: "true"
+          changed-only: "false"
